module version update

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "license": "Apache-2.0",
     "require": {
         "vaimo/kustom-module-admin-settings": "^1",
-        "vaimo/kustom-module-base": "11.0.12",
+        "vaimo/kustom-module-base": "11.0.*",
         "vaimo/kustom-module-logger": "3.0.9",
         "vaimo/kustom-module-siwk": "1.0.13",
         "magento/framework": "^103",
