--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "vaimo/kustom-module-admin-settings": "^1",
         "vaimo/kustom-module-base": "11.0.*",
         "vaimo/kustom-module-logger": "3.0.9",
-        "vaimo/kustom-module-siwk": "1.0.13",
+        "vaimo/kustom-module-siwk": "1.0.*",
         "magento/framework": "^103",
         "magento/module-backend": "^101.0|^102.0",
         "magento/module-config": "^101.0",
